@@ -1,7 +1,7 @@
 # Build Qt apps with the autotools (Autoconf/Automake).
 # M4 macros.
 # This file is part of AutoTroll.
-# Copyright (C) 2006  Benoit Sigoure.
+# Copyright (C) 2006  Benoit Sigoure <benoit.sigoure@lrde.epita.fr>
 #
 # AutoTroll is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -22,6 +22,7 @@
  # DOCUMENTATION #
  # ------------- #
 
+# Disclaimer: Never tested with anything else than Qt 4.2! Feedback welcome.
 # Simply invoke AT_WITH_QT in your configure.ac. AT_WITH_QT can take
 # arguments which are documented in depth below. The default arguments are
 # equivalent to the default .pro file generated by qmake.
@@ -102,7 +103,7 @@ dnl Memo: AC_ARG_WITH(package, help-string, [if-given], [if-not-given])
   fi
 
   # Find qmake.
-  AC_PATH_PROGS([QMAKE], [qmake], [missing], [$QT_PATH:$PATH:$tmp_qt_paths])
+  AC_PATH_PROGS([QMAKE], [qmake], [missing], [$QT_DIR:$QT_PATH:$PATH:$tmp_qt_paths])
   if test x"$QMAKE" = xmissing; then
     AC_MSG_ERROR([Cannot find qmake in your PATH. Try using --with-qt.])
   fi
@@ -199,20 +200,31 @@ m4_ifval([$3],
   AC_CACHE_CHECK([whether we can build a simple Qt app], [at_cv_qt_build],
   [at_cv_qt_build=ko
   : ${MAKE=make}
+
   if $MAKE >&AS_MESSAGE_LOG_FD 2>&1; then
-    at_cv_qt_build=ok
+    at_cv_qt_build='ok, looks like Qt 4'
   else
-    at_cv_qt_build=ko
-    echo "$as_me:$LINENO: failed program was:" >&AS_MESSAGE_LOG_FD
-    sed 's/^/| /' conftest.h >&AS_MESSAGE_LOG_FD
-    echo "$as_me:$LINENO: failed program was:" >&AS_MESSAGE_LOG_FD
-    sed 's/^/| /' conftest.cpp >&AS_MESSAGE_LOG_FD
+    echo "$as_me:$LINENO: Build failed, trying to #include <qobject.h> \
+instead" >&AS_MESSAGE_LOG_FD
+    sed 's/<QObject>/<qobject.h>/' conftest.h > tmp.h
+    mv tmp.h conftest.h
+    if $MAKE >&AS_MESSAGE_LOG_FD 2>&1; then
+      at_cv_qt_build='ok, looks like Qt 3'
+    else
+      at_cv_qt_build=ko
+      echo "$as_me:$LINENO: failed program was:" >&AS_MESSAGE_LOG_FD
+      sed 's/^/| /' conftest.h >&AS_MESSAGE_LOG_FD
+      echo "$as_me:$LINENO: failed program was:" >&AS_MESSAGE_LOG_FD
+      sed 's/^/| /' conftest.cpp >&AS_MESSAGE_LOG_FD
+    fi
   fi
   ])dnl end: AC_CACHE_CHECK(at_cv_qt_build)
 
-  if test x$at_cv_qt_build != xok; then
+  if test x"$at_cv_qt_build" = xko; then
     AC_MSG_ERROR([Cannot build a test Qt program])
   fi
+  QT_VERSION_MAJOR=`echo "$at_cv_qt_build" | sed 's/^[^0-9]*//'`
+  AC_SUBST([QT_VERSION_MAJOR])
 
   # This sed filter is applied after an expression of the form: /^FOO.*=/!d;
   # It starts by removing the beginning of the line, removing references to
